--- a/FIZ219_EST_UygulamaNotlari_11_AraSinav2.html
+++ b/FIZ219_EST_UygulamaNotlari_11_AraSinav2.html
@@ -13077,9 +13077,8 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="Uygulama-Notlar&#305;:-11">Uygulama Notlar&#305;: 11<a class="anchor-link" href="#Uygulama-Notlar&#305;:-11">&#182;</a></h1><h2 id="F&#304;Z219---Bilgisayar-Programlama-I-|-20/01/2020">F&#304;Z219 - Bilgisayar Programlama I | 20/01/2020<a class="anchor-link" href="#F&#304;Z219---Bilgisayar-Programlama-I-|-20/01/2020">&#182;</a></h2><ul>
-<li>2. Ara Sınav Soru ve Çözümleri</li>
-</ul>
+<h1 id="Uygulama-Notlar&#305;:-11">Uygulama Notlar&#305;: 11<a class="anchor-link" href="#Uygulama-Notlar&#305;:-11">&#182;</a></h1><h2 id="F&#304;Z219---Bilgisayar-Programlama-I-|-20/01/2020">F&#304;Z219 - Bilgisayar Programlama I | 20/01/2020<a class="anchor-link" href="#F&#304;Z219---Bilgisayar-Programlama-I-|-20/01/2020">&#182;</a></h2>
+<ul><li>2. Ara Sınav Soru ve Çözümleri</li></ul>
 <p>Emre S. Tasci <a href="mailto:emre.tasci@hacettepe.edu.tr">emre.tasci@hacettepe.edu.tr</a></p>
 
 </div>
